# Ultralytics 🚀 AGPL-3.0 License - https://ultralytics.com/license

[workspace]
resolver = "2"
members = ["crates/ultralytics-inference", "crates/ultralytics-pyo3"]

[workspace.package]
version = "0.0.14"
edition = "2024"
rust-version = "1.88"
authors = [
    "Glenn Jocher <glenn.jocher@ultralytics.com>",
    "Onuralp Sezer <onuralp@ultralytics.com>",
]
description = "Ultralytics YOLO inference library and CLI for Rust"
license = "AGPL-3.0"
repository = "https://github.com/ultralytics/inference"
documentation = "https://docs.rs/ultralytics-inference"
homepage = "https://www.ultralytics.com"
readme = "README.md"
keywords = ["yolo", "ultralytics", "inference", "computer-vision", "ml"]
categories = ["computer-vision", "science", "command-line-interface"]

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[workspace.dependencies]
# Core - Image loading and processing
image = "^0.25"
jpeg-decoder = "^0.3"
fast_image_resize = { version = "^6.0", features = ["image", "rayon"] }
# SIMD for fast preprocessing
wide = "^1.4"

# LRU cache for preprocessing LUT
lru = "^0.18"

# Numerical computing (must match ort's ndarray version 0.17)
ndarray = { version = "^0.17", features = ["rayon"] }

# ONNX Runtime 1.24.2
ort = { version = "2.0.0-rc.12", default-features = false, features = [
    "std",
    "ndarray",
    "download-binaries",
    "copy-dylibs",
    "half",
    "tls-native",
    "num-complex",
] }

# Core - FP16 support (required by ort's half feature)
half = { version = "^2.7", features = ["num-traits"] }
ureq = "^3.3.0"
dirs = "^6.0"
rayon = "^1.12"
bytemuck = { version = "^1.25", features = ["derive"] }

# Core - CLI arguments parsing
clap = { version = "^4.6.1", features = ["derive"] }
colored = "^3.1.1"

# Optional - Visualization and Video support
minifb = { version = "^0.28.0" }
video-rs = { version = ">=0.10.5, <0.12", features = ["ndarray"] }

# Optional - Image annotation (for --save feature)
imageproc = { version = "^0.26" }
ab_glyph = { version = "^0.2" }

ultralytics-inference = { path = "crates/ultralytics-inference" }

[profile.dev]
opt-level = 0
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
